# ocr2md

./: .env.example  .gitignore  Cargo.toml  README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  worker.rs
apps/desktop/src-tauri/tests/: commands_test.rs
apps/desktop/ui/: index.html  package-lock.json  package.json  tsconfig.json
apps/desktop/ui/src/: App.tsx  main.tsx
apps/desktop/ui/src/components/: LayoutShell.test.tsx  LayoutShell.tsx
apps/desktop/ui/src/styles/: app.css  tokens.css
crates/ocr2md-core/: Cargo.toml
crates/ocr2md-core/src/: error.rs  file_kind.rs  lib.rs  ocr.rs  pipeline.rs  profile_store.rs  queue.rs  secure_config.rs
crates/ocr2md-core/tests/: pipeline_smoke_test.rs  profile_store_test.rs  queue_state_test.rs  secure_config_test.rs
docs/plans/: 2026-02-21-desktop-workbench-design.md  2026-02-21-desktop-workbench-implementation.md
rust/: cli.rs  config.rs  http.rs  llm.rs  main.rs  ocr.rs
