[package]
name = "ocr2md-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform OCR to Markdown pipeline using GLM-OCR and commercial LLM APIs"

[[bin]]
name = "ocr2md"
path = "rust/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
