[workspace]
members = ["crates/ocr2md-core", "apps/desktop/src-tauri"]
resolver = "2"

[package]
name = "ocr2md-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cross-platform OCR to Markdown pipeline using GLM-OCR and commercial LLM APIs"

[[bin]]
name = "ocr2md"
path = "rust/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ocr2md-core = { path = "crates/ocr2md-core" }

[dev-dependencies]
pretty_assertions = "1.4"
