[package]
name = "ocr2md-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core OCR-to-Markdown pipeline for Ocr2Md"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
mime_guess = "2.0"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip", "brotli", "deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.23"
